# CRISPRbuilder-TB

./: .gitignore  M2_projet.ipynb  NEWS  README.md  __main__.py  complementary.py  essai.csv  essai.py  essai.txt  lineage.csv  main.py  pyproject.toml  requirements.txt  snps.csv  support.py  test.py  test2.py  test3.py
.ipynb_checkpoints/: M2_projet-checkpoint.ipynb
crisprbuilder_tb/: __init__.py  __main__.py  fonctions.py  pyproject.toml  sources.py  support.py  testpath.py  unittestmain.py
crisprbuilder_tb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crisprbuilder_tb/crisprbuilder_tb/: __init__.py
crisprbuilder_tb/doc/: crisprbuilder-tb.ipynb  crisprbuilder_tb.ipynb  crisprbuilder_tb.md
crisprbuilder_tb/doc/.ipynb_checkpoints/: crisprbuilder_tb-checkpoint.ipynb
crisprbuilder_tb/tests/: test_crisprbuilder_tb.py
data/: .~lock.Brynildsrud_Dataset_S1.xls#  .~lock.Palittapon_SNPs.xlsx#  Palittapon_SNPs.xlsx  lineage.csv
doc/: LICENSE  README.md  crisprbuilder-tb (1).md  crisprbuilder-tb.html  crisprbuilder-tb.ipynb  crisprbuilder-tb.md  crisprbuilder_tb.md
doc/.ipynb_checkpoints/: crisprbuilder-tb-checkpoint.ipynb  crisprbuilder_tb-checkpoint.ipynb
package_pymtc/: __init__.py
test_initial_fonctionne/: __main__.py  pyproject.toml
test_initial_fonctionne/crisprbuilder_tb/: __init__.py
test_initial_fonctionne/data/: Brynildsrud_Dataset_S1.xls
tests/: test_crisprbuilder_tb.py  test_package_pymtc.py
