[tool.poetry]
name = "crisprbuilder_tb"
version = "0.1.0"
description = ""
authors = ["stephane-robin <robin.stephane@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
xlrd = "^1.2.0"
xmltodict = "^0.12.0"
biopython = "^1.77"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
